--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,14 @@
         "pimple/pimple": "1.0.*",
         "twig/twig": "1.*",
         "nikic/php-parser": "0.9.*",
-        "symfony/console": ">=2.1,<3.0-dev",
-        "symfony/finder": ">=2.1,<3.0-dev",
-        "symfony/filesystem": ">=2.1,<3.0-dev",
-        "symfony/yaml": ">=2.1,<3.0-dev",
-        "symfony/process": ">=2.1,<3.0-dev"
+        "symfony/console": "~2.1",
+        "symfony/finder": "~2.1",
+        "symfony/filesystem": "~2.1",
+        "symfony/yaml": "~2.1",
+        "symfony/process": "~2.1"
     },
     "autoload": {
         "psr-0": { "Sami": "." }
     },
-    "bin": ["sami.php"],
-    "minimum-stability": "dev"
+    "bin": ["sami.php"]
 }
