--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,16 @@ php:
   - 5.3
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
 
 before_script:
-    - composer install --prefer-source
+  - composer self-update
+  - composer install --no-interaction --prefer-source --dev
 
 script: phpunit
+
+matrix:
+  allow_failures:
+    - php: hhvm
+  fast_finish: true
