Dynamic left content now correctly updates based on the depth

--- a/Sami/Resources/themes/default/manifest.yml
+++ b/Sami/Resources/themes/default/manifest.yml
@@ -22,7 +22,7 @@ global:
     'traits.twig':     'traits.html'
     'opensearch.twig': 'opensearch.xml'
     'search.twig':     'search.html'
-    'sami.js.twig':    'js/sami.js'
+    'sami.js.twig':    'sami.js'
 
 namespace:
     'namespace.twig':   '%s.html'
