Using typeahead and bloodhound for search.
This commit updates the search engine to use Twitter's
typeahead and Bloodhound plugins to implement the search
engine and provide typeahead suggestions when entering
search terms. Selecting an auto-completed term will take you
directly to the page, while hitting enter on the form will
take you to the search page. Both the search page and
auto-complete searches use bloodhound for the search engine.

A "Search" link was added to the menu so that mobile users
will have a search function when the left-nav disappears.

--- a/Sami/Resources/themes/default/manifest.yml
+++ b/Sami/Resources/themes/default/manifest.yml
@@ -12,6 +12,8 @@ static:
     'fonts/glyphicons-halflings-regular.woff': 'fonts/glyphicons-halflings-regular.woff'
     'js/bootstrap.min.js': 'js/bootstrap.min.js'
     'js/jquery-1.11.1.min.js': 'js/jquery-1.11.1.min.js'
+    'js/handlebars.min.js': 'js/handlebars.min.js'
+    'js/typeahead.min.js': 'js/typeahead.min.js'
 
 global:
     'index.twig':      'index.html'
