--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3.0",
         "pimple/pimple": "2.*",
         "twig/twig": "1.*",
-        "nikic/php-parser": "0.9.*",
+        "nikic/php-parser": "~1.0",
         "michelf/php-markdown": "~1.3",
         "symfony/console": "~2.1",
         "symfony/finder": "~2.1",
