--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
 language: php
 
 php:
+  - 5.3.3
   - 5.3
   - 5.4
   - 5.5
   - 5.6
   - hhvm
 
-before_script:
-  - composer install --no-interaction --prefer-source --dev
+install:
+  - travis_retry composer install --no-interaction --prefer-source
 
-script: phpunit
-
-matrix:
-  allow_failures:
-    - php: hhvm
-  fast_finish: true
+script:
+  - phpunit
