--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "phpdocumentor/reflection-docblock": "~2.0"
     },
     "autoload": {
-        "psr-0": { "Sami": "." }
+        "psr-4": { "Sami\\": "Sami/" }
     },
     "extra": {
         "branch-alias": {
