--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.3",
         "pimple/pimple": "~3.0",
-        "twig/twig": "~1.13",
+        "twig/twig": "~1.20|~2.0",
         "nikic/php-parser": "~1.0",
         "michelf/php-markdown": "~1.3",
         "symfony/console": "~2.1",
@@ -32,5 +32,7 @@
             "dev-master": "3.0-dev"
         }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "bin": ["sami.php"]
 }
