--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,31 @@
 language: php
 
-php:
-  - 5.3.3
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - hhvm
+env:
+    global:
+        - TWIG=2.x
+
+matrix:
+    include:
+        - php: 5.3
+          env: TWIG=1.x
+        - php: 5.4
+          env: TWIG=1.x
+        - php: 5.5
+        - php: 5.6
+        - php: 7.0
+        - php: hhvm
+
+sudo: false
+
+cache:
+    - $HOME/.composer/cache/files
+
+before_install:
+    - sh -c "if [ '$TWIG' = '2.x' ]; then sed -i 's/~1.20|~2.0/~2.0/g' composer.json; composer update; fi"
+    - sh -c "if [ '$TWIG' = '1.x' ]; then sed -i 's/~1.20|~2.0/~1.20/g' composer.json; composer update; fi"
 
 install:
-  - travis_retry composer install --no-interaction --prefer-source
+    - travis_retry composer install
 
 script:
-  - phpunit
+    - phpunit
