--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony/yaml": "~2.1",
         "symfony/process": "~2.1",
         "phpdocumentor/reflection-docblock": "~2.0",
-        "blackfire/php-sdk": "dev-php-sdk-plus"
+        "blackfire/php-sdk": "^1.3.1"
     },
     "autoload": {
         "psr-4": { "Sami\\": "Sami/" }
