--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3.9",
         "pimple/pimple": "~3.0",
         "twig/twig": "~1.20|~2.0",
-        "nikic/php-parser": "~1.0",
+        "nikic/php-parser": "~1.0|~2.0",
         "michelf/php-markdown": "~1.3",
         "symfony/console": "~2.1",
         "symfony/finder": "~2.1",
