--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "require": {
         "php": ">=5.5.9",
         "pimple/pimple": "~3.0",
-        "twig/twig": "~1.20|~2.0",
-        "nikic/php-parser": "~1.0",
+        "twig/twig": "~2.0@dev",
+        "nikic/php-parser": "~3.0@dev",
         "michelf/php-markdown": "~1.3",
         "symfony/console": "~3.0",
         "symfony/finder": "~3.0",
