--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ cache:
     - .phpunit
 
 before_install:
+    - export SYMFONY_PHPUNIT_DIR="$(pwd)/.phpunit"
     - if [[ ! $TRAVIS_PHP_VERSION = hhvm* ]]; then INI_FILE=~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; else INI_FILE=/etc/hhvm/php.ini; fi
     - echo memory_limit = -1 >> $INI_FILE
     - if [[ ! $TRAVIS_PHP_VERSION = hhvm* ]]; then phpenv config-rm xdebug.ini || echo "xdebug not available"; fi
-    - ./phpunit install
     - |
         if [[ "$BLACKFIRE" = "on" ]]; then
             openssl aes-256-cbc -K $encrypted_16ab3ffdcd52_key -iv $encrypted_16ab3ffdcd52_iv -in .blackfire.travis.ini.enc -out ~/.blackfire.ini -d
@@ -44,4 +44,4 @@ before_script:
         fi
 
 script:
-    - ./phpunit
+    - ./vendor/bin/simple-phpunit
