--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
         "phpdocumentor/reflection-docblock": "~2.0",
         "blackfire/php-sdk": "^1.5.18"
     },
+    "require-dev": {
+        "symfony/phpunit-bridge": "~3.2"
+    },
     "autoload": {
         "psr-4": { "Sami\\": "Sami/" }
     },
