--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.5.9",
         "pimple/pimple": "~3.0",
         "twig/twig": "~2.0@dev",
-        "nikic/php-parser": "~3.0@dev",
+        "nikic/php-parser": "~3.0",
         "michelf/php-markdown": "~1.3",
         "symfony/console": "~3.0",
         "symfony/finder": "~3.0",
@@ -36,7 +36,6 @@
             "dev-master": "4.0-dev"
         }
     },
-    "minimum-stability": "dev",
     "prefer-stable": true,
     "bin": ["sami.php"]
 }
