fixed HHVM support

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,9 @@ matrix:
         - php: 7.0
         - php: 7.0
           env: BLACKFIRE=on
-        # Use the newer stack for HHVM as HHVM does not support Precise anymore since a long time and so Precise has an outdated version
-        - php: hhvm-3.12
+        - php: hhvm-stable
           sudo: required
           dist: trusty
-          group: edge
     fast_finish: true
 
 sudo: false
