--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=7.0",
         "pimple/pimple": "~3.0",
-        "twig/twig": "~2.0@dev",
+        "twig/twig": "~2.0",
         "nikic/php-parser": "~3.0",
         "michelf/php-markdown": "~1.3",
         "symfony/console": "~3.0",
