--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
         - php: 7.1
         - php: 7.1
           env: BLACKFIRE=on
+        - php: 7.2
         - php: hhvm-stable
           sudo: required
           dist: trusty
