--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,6 @@ matrix:
         - php: 7.1
           env: BLACKFIRE=on
         - php: 7.2
-        - php: hhvm-stable
-          sudo: required
-          dist: trusty
-    allow_failures:
-        - php: hhvm-stable
     fast_finish: true
 
 sudo: false
@@ -23,9 +18,8 @@ cache:
 
 before_install:
     - export SYMFONY_PHPUNIT_DIR="$(pwd)/.phpunit"
-    - if [[ ! $TRAVIS_PHP_VERSION = hhvm* ]]; then INI_FILE=~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; else INI_FILE=/etc/hhvm/php.ini; fi
-    - echo memory_limit = -1 >> $INI_FILE
-    - if [[ ! $TRAVIS_PHP_VERSION = hhvm* ]]; then phpenv config-rm xdebug.ini || echo "xdebug not available"; fi
+    - echo memory_limit = -1 >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+    - phpenv config-rm xdebug.ini
     - |
         if [[ "$BLACKFIRE" = "on" ]]; then
             openssl aes-256-cbc -K $encrypted_16ab3ffdcd52_key -iv $encrypted_16ab3ffdcd52_iv -in .blackfire.travis.ini.enc -out ~/.blackfire.ini -d
