--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "twig/twig": "~2.0",
         "nikic/php-parser": "~3.0",
         "michelf/php-markdown": "~1.3",
-        "symfony/console": "~3.0",
-        "symfony/finder": "~3.0",
-        "symfony/filesystem": "~3.0",
-        "symfony/yaml": "~3.0",
-        "symfony/process": "~3.0",
+        "symfony/console": "~3.0|~4.0",
+        "symfony/finder": "~3.0|~4.0",
+        "symfony/filesystem": "~3.0|~4.0",
+        "symfony/yaml": "~3.0|~4.0",
+        "symfony/process": "~3.0|~4.0",
         "phpdocumentor/reflection-docblock": "~2.0",
         "blackfire/php-sdk": "^1.5.18"
     },
