--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": "^7.1.3",
         "pimple/pimple": "~3.0",
         "twig/twig": "~2.0",
         "nikic/php-parser": "~3.0",
